Fix CORS and allow public auth endpoints